force-app/main/default/objects/Laptop__c/fields/price_approval_status__c.field-meta.xml
<CustomField>
    <fullName>price_approval_status__c</fullName>
    <label>price approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>