force-app/main/default/objects/Laptop__c/fields/RAM_Gb__c.field-meta.xml
<CustomField>
    <fullName>RAM_Gb__c</fullName>
    <label>RAM (Gb)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>